// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom render gives all relevant info to scoped slot 1`] = `

<div class="ais-CurrentRefinements">
  <div>
    <div>
      <button>
        <a href="?brands=apple">
          url
        </a>
        <pre>
          {
  "attribute": "brands",
  "label": "apple",
  "value": {
    "attributeName": "brands",
    "computedLabel": "apple"
  },
  "key": "brands-apple"
}
        </pre>
      </button>
    </div>
    <div>
      <button>
        <a href="?colors=red">
          url
        </a>
        <pre>
          {
  "attribute": "colors",
  "label": "red",
  "value": {
    "attributeName": "colors",
    "computedLabel": "red"
  },
  "key": "colors-red"
}
        </pre>
      </button>
    </div>
    <div>
      <button>
        <a href="?requirements=free">
          url
        </a>
        <pre>
          {
  "attribute": "requirements",
  "label": "free",
  "value": {
    "attributeName": "requirements",
    "computedLabel": "free"
  },
  "key": "requirements-free"
}
        </pre>
      </button>
    </div>
  </div>
</div>

`;

exports[`custom render item slot gives all relevant info to scoped slot 1`] = `

<div class="ais-CurrentRefinements">
  <ul class="ais-CurrentRefinements-list">
    <li>
      <div>
        <button>
          <a href="?brands=apple">
            url
          </a>
          <pre>
            {
  "attribute": "brands",
  "label": "apple",
  "value": {
    "attributeName": "brands",
    "computedLabel": "apple"
  },
  "key": "brands-apple"
}
          </pre>
        </button>
      </div>
    </li>
    <li>
      <div>
        <button>
          <a href="?colors=red">
            url
          </a>
          <pre>
            {
  "attribute": "colors",
  "label": "red",
  "value": {
    "attributeName": "colors",
    "computedLabel": "red"
  },
  "key": "colors-red"
}
          </pre>
        </button>
      </div>
    </li>
    <li>
      <div>
        <button>
          <a href="?requirements=free">
            url
          </a>
          <pre>
            {
  "attribute": "requirements",
  "label": "free",
  "value": {
    "attributeName": "requirements",
    "computedLabel": "free"
  },
  "key": "requirements-free"
}
          </pre>
        </button>
      </div>
    </li>
  </ul>
</div>

`;

exports[`default value of excludedAttributes is ["query"] 1`] = `

<div class="ais-CurrentRefinements ais-CurrentRefinements--noRefinement">
  <ul class="ais-CurrentRefinements-list">
  </ul>
</div>

`;

exports[`includedAttributes overrides excludedAttributes (also for query) 1`] = `

<div class="ais-CurrentRefinements">
  <ul class="ais-CurrentRefinements-list">
    <li>
      <span class="ais-CurrentRefinements-item">
        <span class="ais-CurrentRefinements-label">
          Query: some query
        </span>
        <button class="ais-CurrentRefinements-delete">
          ✕
        </button>
      </span>
    </li>
  </ul>
</div>

`;

exports[`includedAttributes overrides excludedAttributes 1`] = `

<div class="ais-CurrentRefinements">
  <ul class="ais-CurrentRefinements-list">
    <li>
      <span class="ais-CurrentRefinements-item">
        <span class="ais-CurrentRefinements-label">
          Hi there:
        </span>
        <button class="ais-CurrentRefinements-delete">
          ✕
        </button>
      </span>
    </li>
  </ul>
</div>

`;

exports[`renders correctly (empty) 1`] = `

<div class="ais-CurrentRefinements ais-CurrentRefinements--noRefinement">
  <ul class="ais-CurrentRefinements-list">
  </ul>
</div>

`;

exports[`renders correctly (with duplicate refinements) 1`] = `

<div class="ais-CurrentRefinements">
  <ul class="ais-CurrentRefinements-list">
    <li>
      <span class="ais-CurrentRefinements-item">
        <span class="ais-CurrentRefinements-label">
          Brands: apple
        </span>
        <button class="ais-CurrentRefinements-delete">
          ✕
        </button>
      </span>
    </li>
    <li>
      <span class="ais-CurrentRefinements-item">
        <span class="ais-CurrentRefinements-label">
          Brands: samsung
        </span>
        <button class="ais-CurrentRefinements-delete">
          ✕
        </button>
      </span>
    </li>
  </ul>
</div>

`;

exports[`renders correctly (with query) 1`] = `

<div class="ais-CurrentRefinements">
  <ul class="ais-CurrentRefinements-list">
    <li>
      <span class="ais-CurrentRefinements-item">
        <span class="ais-CurrentRefinements-label">
          Query: some query
        </span>
        <button class="ais-CurrentRefinements-delete">
          ✕
        </button>
      </span>
    </li>
    <li>
      <span class="ais-CurrentRefinements-item">
        <span class="ais-CurrentRefinements-label">
          Brands: apple
        </span>
        <button class="ais-CurrentRefinements-delete">
          ✕
        </button>
      </span>
    </li>
    <li>
      <span class="ais-CurrentRefinements-item">
        <span class="ais-CurrentRefinements-label">
          Colors: red
        </span>
        <button class="ais-CurrentRefinements-delete">
          ✕
        </button>
      </span>
    </li>
    <li>
      <span class="ais-CurrentRefinements-item">
        <span class="ais-CurrentRefinements-label">
          Requirements: free
        </span>
        <button class="ais-CurrentRefinements-delete">
          ✕
        </button>
      </span>
    </li>
  </ul>
</div>

`;

exports[`renders correctly (with refinements) 1`] = `

<div class="ais-CurrentRefinements">
  <ul class="ais-CurrentRefinements-list">
    <li>
      <span class="ais-CurrentRefinements-item">
        <span class="ais-CurrentRefinements-label">
          Brands: apple
        </span>
        <button class="ais-CurrentRefinements-delete">
          ✕
        </button>
      </span>
    </li>
    <li>
      <span class="ais-CurrentRefinements-item">
        <span class="ais-CurrentRefinements-label">
          Colors: red
        </span>
        <button class="ais-CurrentRefinements-delete">
          ✕
        </button>
      </span>
    </li>
    <li>
      <span class="ais-CurrentRefinements-item">
        <span class="ais-CurrentRefinements-label">
          Requirements: free
        </span>
        <button class="ais-CurrentRefinements-delete">
          ✕
        </button>
      </span>
    </li>
  </ul>
</div>

`;
